# recovery-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PRD.md  README.md  docker-compose.yml  migrate.py  pyproject.toml  seed_db.py
.claude/: settings.local.json
data/evaluations/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json
data/reports/: cost_report.json  evolution_report.json  evolution_report.md  meta_eval_iteration_1.json  meta_eval_iteration_2.json  meta_eval_iteration_3.json  meta_eval_iteration_4.json  meta_eval_iteration_5.json  meta_eval_iteration_6.json  meta_eval_iteration_7.json  meta_eval_iteration_8.json  per_conversation_scores.csv  per_conversation_scores.json  run_config.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
knowledge/: 01-getting-started.md  01-implementation-plan.md  02-production-setup.md  03-future-work.md  04-email-confirmation.md  learning_loop.md  self_learning_improvement.md  sll-improvement-plan.md
prompts/assessment/: v1.json  v2.json  v3.json  v4.json
prompts/final_notice/: v1.json  v2.json  v3.json  v4.json  v5.json
prompts/resolution/: v1.json  v2.json  v3.json  v4.json  v5.json
src/: config.py  email_sender.py
src/agents/: assessment.py  base.py  compliance.py  final_notice.py  resolution.py
src/api/: app.py  auth.py  dependencies.py
src/context/: summarizer.py  (+1 more)
tests/: test_compliance.py  test_context_budget.py  test_models.py  test_statistical.py
(+57 files in other folders)
